# fast

./: .env.dev  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yaml  docker-compose.wip-dev.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
app/: gunicorn_conf.py  main.py
app/api/: routes.py
app/api/v1/: router.py
app/api/v1/routes/: employees.py  items.py
app/core/: config.py
app/db/: postgres.py
app/services/db/postgres/: pg-connect.py
kubernetes/: configmap.yaml  deployment.yaml  deployments.yaml  hpa.yaml  ingress.yaml  service.yaml
terraform/: addons.tf  ecr.tf  exs.tf  iam.tf  kubernetes.tf  main.tf  outputs.tf  rds.tf  redis.tf  variables.tf  vpc.tf
