[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast"
version = "0.1.0"
description = "A FastAPI application."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi[standard]==0.115.0",
    "uvicorn[standard]==0.30.0",
    "gunicorn==22.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
